Add Card View & Media Object

--- a/Example/card_version.html
+++ b/Example/card_version.html
@@ -52,30 +52,70 @@
             </h3>
         </div>
     </div>
-
-      <ul class="list-unstyled">
-        <li class="media">
-          <img src="image/dashboard_blue.png" class="mr-3" alt="...">
-          <div class="media-body">
-            <h5 class="mt-0 mb-1">Example_Image</h5>
-            무엇인가를 설명 설명 하는 공간 나중에 링크 달거야
+    <div class="card-columns">
+        <div class="card">
+          <img src="image/Example_Image.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Card title that wraps to a new line</h5>
+            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          </div>
         </div>
-        </li>
-        <li class="media my-4">
-          <img src="image/dashboard_blue.png" class="mr-3" alt="...">
-          <div class="media-body">
-            <h5 class="mt-0 mb-1">Example_Image</h5>
-            무엇인가를 설명 설명 하는 공간 나중에 링크 달거야
+        <div class="card p-3">
+          <blockquote class="blockquote mb-0 card-body">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
+            <footer class="blockquote-footer">
+              <small class="text-muted">
+                Someone famous in <cite title="Source Title">Source Title</cite>
+              </small>
+            </footer>
+          </blockquote>
         </div>
-        </li>
-        <li class="media">
-          <img src="image/dashboard_blue.png" class="mr-3" alt="...">
-          <div class="media-body">
-            <h5 class="mt-0 mb-1">Example_Image</h5>
-            무엇인가를 설명 설명 하는 공간 나중에 링크 달거야
+        <div class="card">
+          <img src="image/Example_Image.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+          </div>
         </div>
-        </li>
-      </ul>
+        <div class="card bg-primary text-white text-center p-3">
+          <blockquote class="blockquote mb-0">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat.</p>
+            <footer class="blockquote-footer text-white">
+              <small>
+                Someone famous in <cite title="Source Title">Source Title</cite>
+              </small>
+            </footer>
+          </blockquote>
+        </div>
+        <div class="card text-center">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">This card has a regular title and short paragraphy of text below it.</p>
+            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+          </div>
+        </div>
+        <div class="card">
+          <img src="image/Example_Image.jpg" class="card-img-top" alt="...">
+        </div>
+        <div class="card p-3 text-right">
+          <blockquote class="blockquote mb-0">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
+            <footer class="blockquote-footer">
+              <small class="text-muted">
+                Someone famous in <cite title="Source Title">Source Title</cite>
+              </small>
+            </footer>
+          </blockquote>
+        </div>
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">This is another card with title and supporting text below. This card has some additional content to make it slightly taller overall.</p>
+            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+          </div>
+        </div>
+      </div>
     <footer style="background-color : #000000; color : white">
         <div class="container">
             <br>
