News Page by Jsp

--- a/Example/index.html
+++ b/Example/index.html
@@ -9,7 +9,7 @@
     <title>Example</title>
 </head>
 
-<body>
+<body style="background: #34495e;">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">Navbar</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -58,21 +58,21 @@
           <img src="image/dashboard_blue.png" class="mr-3" alt="...">
           <div class="media-body">
             <h5 class="mt-0 mb-1">Example_Image</h5>
-            무엇인가를 설명 설명 하는 공간 나중에 링크 달거야
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis nobis non, corporis quasi nihil hic exercitationem, ut unde impedit id, delectus odit totam. Id, debitis. Libero eos dolorem alias explicabo.
         </div>
         </li>
         <li class="media my-4">
           <img src="image/dashboard_blue.png" class="mr-3" alt="...">
           <div class="media-body">
             <h5 class="mt-0 mb-1">Example_Image</h5>
-            무엇인가를 설명 설명 하는 공간 나중에 링크 달거야
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam sint quis consequatur, natus vero ea esse repudiandae eligendi, inventore voluptate neque, quo commodi iste. Dicta accusantium ut perferendis repudiandae atque!
         </div>
         </li>
         <li class="media">
           <img src="image/dashboard_blue.png" class="mr-3" alt="...">
           <div class="media-body">
             <h5 class="mt-0 mb-1">Example_Image</h5>
-            무엇인가를 설명 설명 하는 공간 나중에 링크 달거야
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempore ipsam iste perferendis aliquid officia, cum tempora voluptates neque et nihil deserunt pariatur unde animi aut sit asperiores, aspernatur omnis necessitatibus.
         </div>
         </li>
       </ul>
